@@ -50,8 +50,8 @@ class StripeFeeCalculatorTest {
     void shouldReturnFeeListForChargeWithNo3ds() {
         List<Fee> feeList = StripeFeeCalculator.getFeeList(stripeFee, request, feePercentage, 5, 10);
         assertThat(feeList.size(), is(2));
-        assertThat(feeList.get(0).feeType(), Is.is(FeeType.TRANSACTION));
-        assertThat(feeList.get(0).amount(), Is.is(100L));
+        assertThat(feeList.getFirst().feeType(), Is.is(FeeType.TRANSACTION));
+        assertThat(feeList.getFirst().amount(), Is.is(100L));
         assertThat(feeList.get(1).feeType(), Is.is(FeeType.RADAR));
         assertThat(feeList.get(1).amount(), Is.is(5L));
     }
@@ -60,8 +60,8 @@ class StripeFeeCalculatorTest {
     void shouldReturnFeeListForChargeWith3ds() {
         List<Fee> feeList = StripeFeeCalculator.getFeeList(stripeFee, requestForChargeWith3ds, feePercentage, 5, 10);
         assertThat(feeList.size(), is(3));
-        assertThat(feeList.get(0).feeType(), Is.is(FeeType.TRANSACTION));
-        assertThat(feeList.get(0).amount(), Is.is(100L));
+        assertThat(feeList.getFirst().feeType(), Is.is(FeeType.TRANSACTION));
+        assertThat(feeList.getFirst().amount(), Is.is(100L));
         assertThat(feeList.get(1).feeType(), Is.is(FeeType.RADAR));
         assertThat(feeList.get(1).amount(), Is.is(5L));
         assertThat(feeList.get(2).feeType(), Is.is(FeeType.THREE_D_S));
